# example1

./: README.md  iostats.txt  mkisofs.txt  vmware_server2.sn.txt
c/: Makefile.am  Makefile.in  a.c  armstrong.c  arp.c  arpcheat.c  bomb.c  config.h.in  configure  configure.ac  echo.c  example_test.c  find_bit.c  find_bit_1.c  getip.c  header.h  host.c  http_parse.c  itoa.c  msg_do.c  msg_ex1.c  msgqueue.c  my_atoi.c  sig.c  sock_epoll.c  sock_un_c.c  sock_un_s.c  ssl_genrsa.c  ssl_req.c  ssl_sign.c  step.c  strcpy.c  strsep.c  strtok.c  strtok_1.c  test.c  thread.c  un_c.c  un_s.c
c/gtk/: Makefile.am  Makefile.in  aaa.ui  bbb.ui  easy_cmd.c  entry.c  hello.c  make_mvc.mak
c/kernel/: Makefile  kern_hack.c  mem.c
c/kernel/qpi/: autogen.sh
c/qt/: Makefile.am  Makefile.in  hello.cc  qt.pro
c/wx/: Makefile  Makefile.am  Makefile.in  hello.cc
firefox/: test.xul
oracle/: .login.sql  backup.rman  db_only.rsp  glogin.sql  mkdb.sql  mkdic.sql  pw.sh  restore.rman
perl/: exec_sql.pl  hello.pl  regexp_c.pl  repprt.pl  ssh.pl  ssh2.pl  t.pl  testoracle.pl
python/: check_date.py  des.py  encoding.py  encrypt.py  file_drop.py  getauthor_ty.py  hello.py  initlog.py  load_img_excel.py  logging_ex.py  myproxy.py  paramiko_ex1.py  ps.py  pyqq.py  python-tidy.py  randpw.py  setup.py  ssh.py  ssh_c.py  ssh_select.py  t_get_ty.py  t_htmlparse.py  t_htmlparse1.py  t_mp.py  t_select.py  t_ssh.py  test_httplib.py  test_randpw.py  write_word.py  wx_e_w.py  wx_test.py
python/myweb/: .htaccess  add.py  data.db  settings.py  urls.py
python/myweb/address/: admin.py  models.py  urls.py
python/myweb/templates/address/: address_list.html
python/test_nic/: set_ssh.exp  set_ssh.py  util.py
quickmarco/: keypress.txt
shell/: autochpwd.sh  autoftp.sh  autoftp_win.bat  autotelnet.sh  fonts.conf  format.sh  gen_checksum.sh  hello.sh
shell/work/: hello.sh
