AM_CFLAGS=-Wall
bin_PROGRAMS = a armstrong arpcheat bomb example_test find_bit_1 find_bit getip host msg_do msg_ex1 msgqueue sig step strcpy strsep strtok_1 strtok test thread my_atoi arp sock_un_s sock_un_c sock_epoll echo http_parse
armstrong_LDFLAGS = -lm
example_test_LDFLAGS = -lm
thread_LDFLAGS = -lpthread
#my_atoi_LDFLAGS = -lm
SUBDIRS = gtk
